--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -15,6 +15,8 @@
   --ifm-color-primary-lighter: rgb(102, 212, 189);
   --ifm-color-primary-lightest: rgb(146, 224, 208);
   --ifm-code-font-size: 95%;
+  /* make the main content wider */
+  --ifm-container-width-xl: 100%;
 }
 
 .docusaurus-highlight-code-line {
